<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/boogaloo"
        android:text="@string/titulo"
        android:textColor="#423F4A"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cod"
            android:textColor="#061A93"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/codMiembro"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#E3F6F6"
            android:hint="Ingrese el codigo"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#514B46"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/num"
            android:textColor="#061A93"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numAfiliacion"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#E3F6F6"
            android:hint="Numero de afiliación"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#514B46"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nombre"
            android:textColor="#061A93"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#E3F6F6"
            android:hint="Nombre del miembro"
            android:inputType="textPersonName|textCapWords"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#514B46"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/telefono"
            android:textColor="#061A93"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#E3F6F6"
            android:hint="Telefono de contacto"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#514B46"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#A10303"
            android:text="@string/bt1"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"
            app:backgroundTint="#A10303" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9sp"
            android:background="#BA2803"
            android:text="@string/bt4"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold"
            app:backgroundTint="#BA2803" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10dp"
                android:background="#FFFFFF"
                android:text="@string/bt2"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                app:backgroundTint="#BA2803" />

            <Button
                android:id="@+id/btnViewData"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="#BA2803"
                android:text="@string/bt3"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                app:backgroundTint="#CF2D03" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>